Change the signup button, background from black -> white.

--- a/E-CommerceApp/src/main/resources/static/index.html
+++ b/E-CommerceApp/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 :root {
 	--primary: #2563eb;
 	--primary-soft: #eff6ff;
-	--black: #0f172a;
+	--black: #0f172a;i
 	--white: #ffffff;
 	--gray-100: #f8fafc;
 	--gray-200: #e2e8f0;
@@ -297,8 +297,12 @@ body {
 
 .btn-buy-now {
 	background: var(--black);
-	color: white;
+	color: white;  
 }
+
+#signup{
+	color: white;
+} 
 
 .product-info h3 {
 	font-size: 1.2rem;
@@ -519,9 +523,9 @@ body {
 					class="fa-solid fa-bag-shopping"></i> <span class="badge"
 					id="cart-count">0</span>
 				</a> <a href="login.html" class="auth-btn login-trigger"> Login </a> <a
-					href="signup.html" class="auth-btn signup-trigger"> Signup </a>
+					href="signup.html" id="signup" class="auth-btn signup-trigger"> Signup </a>
 			</div>
-		</div>
+		</div> 
 	</header>
 
 	<section class="hero">
