update the index.html and cart.html

--- a/E-CommerceApp/src/main/resources/static/index.html
+++ b/E-CommerceApp/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 :root {
 	--primary: #2563eb;
 	--primary-soft: #eff6ff;
-	--black: #0f172a;i
+	--black: #0f172a;
 	--white: #ffffff; 
 	--gray-100: #f8fafc;
 	--gray-200: #e2e8f0;
@@ -34,7 +34,8 @@ body {
 	padding-top: 65px;
 	cursor: default;
 }
- 
+
+/* --- SLIM MODERN NAVBAR (65px) --- */
 .navbar {
 	height: 65px;
 	display: flex;
@@ -186,7 +187,7 @@ body {
 .hero-content {
 	color: white;
 	max-width: 650px;
-} 
+}
 
 .eyebrow {
 	text-transform: uppercase;
