Fix old bug in admin-product.html

--- a/E-CommerceApp/src/main/resources/static/admin-products.html
+++ b/E-CommerceApp/src/main/resources/static/admin-products.html
@@ -89,8 +89,7 @@ body {
 	display: block;
 }
 
-@ 
-keyframes fadeIn {from { opacity:0;
+@keyframes fadeIn {from { opacity:0;
 	transform: translateY(10px);
 }
 
